src/objects/Case/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <inlineHelpText>Enter Address if valid address not found in above field</inlineHelpText>
    <label>Address</label>
    <length>200</length>
    <type>Text</type>
</CustomField>