src/objects/Case/fields/Adv_Mat_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Adv_Mat_Part_Number__c</fullName>
    <description>Advanced Material Part Number</description>
    <label>Adv. Mat. Part Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>