src/objects/Case/fields/Advance_Replacement__c.field-meta.xml
<CustomField>
    <fullName>Advance_Replacement__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>User can request for Advance replacement</inlineHelpText>
    <label>Advance Replacement</label>
    <type>Checkbox</type>
</CustomField>