src/objects/Case/fields/AdvMat_Customer_Code__c.field-meta.xml
<CustomField>
    <fullName>AdvMat_Customer_Code__c</fullName>
    <label>AdvMat Customer Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>