src/objects/Case/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <inlineHelpText>This is the rollup of the &apos;Unit Price&apos; from all the Lines</inlineHelpText>
    <label>Line Amount Total</label>
    <summarizedField>RMA_Request_Line__c.Amount__c</summarizedField>
    <summaryForeignKey>RMA_Request_Line__c.RMA_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>