src/objects/Case/fields/Associate_Ticket_with_Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Associate_Ticket_with_Product_Family__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Associate Ticket with Product Family</label>
    <type>Checkbox</type>
</CustomField>