src/objects/Case/fields/Awating_CFO_Approval_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Awating_CFO_Approval_Start_Date__c</fullName>
    <label>Awating CFO Approval Start Date</label>
    <type>Date</type>
</CustomField>