src/objects/Case/fields/Batch_Lot_Return__c.field-meta.xml
<CustomField>
    <fullName>Batch_Lot_Return__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this a batch or a lot return?</inlineHelpText>
    <label>Is this Batch/Lot Return?</label>
    <type>Checkbox</type>
</CustomField>