src/objects/Case/fields/Bill_To_Address__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Bill To Address</inlineHelpText>
    <label>Bill-To Address</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Site</value>
        </filterItems>
        <filterItems>
            <field>Account.Site_Use_Code__c</field>
            <operation>equals</operation>
            <value>BILL_TO</value>
        </filterItems>
        <filterItems>
            <field>Account.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases / RMA Requests (Bill-To Address)</relationshipLabel>
    <relationshipName>BillToAddresses</relationshipName>
    <type>Lookup</type>
</CustomField>