src/objects/Case/fields/Bill_To_Address_Check__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Address_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bill-To Address</label>
    <type>Checkbox</type>
</CustomField>