src/objects/Case/fields/Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>Billing_Type__c</fullName>
    <label>Billing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Zero Dollar Inbound and Outbound ( No Dollar Amount Involved)</fullName>
            </value>
            <value>
                <fullName>Credit Inbound and rebill Outbound ( Both Inbound &amp; Outbound POs Must Show Same Amount and Quantity</fullName>
            </value>
            <value>
                <fullName>Return For Credit Only, No Outbound Rebill Involved</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>