src/objects/Case/fields/BU_Wavelength_Management_Amount_Sum__c.field-meta.xml
<CustomField>
    <fullName>BU_Wavelength_Management_Amount_Sum__c</fullName>
    <label>BU: Wavelength Management - Amount Sum</label>
    <summarizedField>RMA_Request_Line__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>RMA_Request_Line__c.Business_Unit__c</field>
        <operation>equals</operation>
        <value>WSS</value>
    </summaryFilterItems>
    <summaryForeignKey>RMA_Request_Line__c.RMA_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>