src/objects/Case/fields/CFO_Approved__c.field-meta.xml
<CustomField>
    <fullName>CFO_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CFO_Approved For Posting it to Chatter</description>
    <label>CFO_Approved</label>
    <type>Checkbox</type>
</CustomField>