src/objects/Case/fields/CFO_User__c.field-meta.xml
<CustomField>
    <fullName>CFO_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CFO User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases4</relationshipName>
    <type>Lookup</type>
</CustomField>