src/objects/Case/fields/Contract_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Contract_Manufacturer__c</fullName>
    <inlineHelpText>If applicable, this is the name of the contract manufacturer</inlineHelpText>
    <label>Contract Manufacturer</label>
    <length>100</length>
    <type>Text</type>
</CustomField>