src/objects/Case/fields/Count_of_IPH_Lines__c.field-meta.xml
<CustomField>
    <fullName>Count_of_IPH_Lines__c</fullName>
    <label>Count of IPH Lines</label>
    <summaryFilterItems>
        <field>RMA_Request_Line__c.Org_Code__c</field>
        <operation>equals</operation>
        <value>IPH</value>
    </summaryFilterItems>
    <summaryForeignKey>RMA_Request_Line__c.RMA_Request__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>