src/objects/Case/fields/Count_of_RMA_Request_Lines__c.field-meta.xml
<CustomField>
    <fullName>Count_of_RMA_Request_Lines__c</fullName>
    <description>Count of RMA Request Lines</description>
    <label>Count of RMA Request Lines</label>
    <summaryForeignKey>RMA_Request_Line__c.RMA_Request__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>