src/objects/Case/fields/Cust_Acc_ID__c.field-meta.xml
<CustomField>
    <fullName>Cust_Acc_ID__c</fullName>
    <label>Cust Acc ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>