src/objects/Case/fields/Cust_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>Cust_PO_Number__c</fullName>
    <label>Cust PO Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>