src/objects/Case/fields/Cust_will_provide_PO_Ref_after_RMA__c.field-meta.xml
<CustomField>
    <fullName>Cust_will_provide_PO_Ref_after_RMA__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Customer will provide PO/Ref # after RMA# is issued</inlineHelpText>
    <label>Cust will provide PO/Ref # after RMA</label>
    <type>Checkbox</type>
</CustomField>