src/objects/Case/fields/Customer_Address__c.field-meta.xml
<CustomField>
    <fullName>Customer_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Address</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(2 OR 3) AND 1 AND 4</booleanFilter>
        <errorMessage>Value does not exist or does not match any Address</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Site</value>
        </filterItems>
        <filterItems>
            <field>Account.ParentId</field>
            <operation>equals</operation>
            <valueField>$Source.Customer_Name__c</valueField>
        </filterItems>
        <filterItems>
            <field>Account.ParentId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <filterItems>
            <field>Account.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases / RMA Requests (Customer Address)</relationshipLabel>
    <relationshipName>Cases_RMA_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>