src/objects/Case/fields/Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_ID__c</fullName>
    <label>Customer ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>