src/objects/Case/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Return From Customer Name</description>
    <label>Customer Name</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 OR (2 AND 3)) AND 4</booleanFilter>
        <errorMessage>Value does not exist or does not match any Customer</errorMessage>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>notEqual</operation>
            <value>Site</value>
        </filterItems>
        <filterItems>
            <field>Account.ParentId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Site</value>
        </filterItems>
        <filterItems>
            <field>Account.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases / RMA Requests (From Customer Name)</relationshipLabel>
    <relationshipName>Return_From_Customer_RMA</relationshipName>
    <type>Lookup</type>
</CustomField>