src/objects/Case/fields/Customer_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Part_Number__c</fullName>
    <description>Customer&apos;s Part Number for the item</description>
    <label>Customer Part Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>