src/objects/Case/fields/CustomerID__c.field-meta.xml
<CustomField>
    <fullName>CustomerID__c</fullName>
    <label>Customer ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>