src/objects/Case/fields/CustomerRef_RMANo__c.field-meta.xml
<CustomField>
    <fullName>CustomerRef_RMANo__c</fullName>
    <inlineHelpText>RMA Number</inlineHelpText>
    <label>CustomerRef/RMANo</label>
    <length>30</length>
    <type>Text</type>
</CustomField>