src/objects/Case/fields/Data_n_W_BU_GM__c.field-meta.xml
<CustomField>
    <fullName>Data_n_W_BU_GM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Data n/W BU GM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>