src/objects/Case/fields/Date_Time_In__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_In__c</fullName>
    <label>Date/Time In</label>
    <type>DateTime</type>
</CustomField>