src/objects/Case/fields/Date_Time_Out__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Out__c</fullName>
    <label>Date/Time Out</label>
    <type>DateTime</type>
</CustomField>