src/objects/Case/fields/Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis__c</fullName>
    <label>Diagnosis</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>