src/objects/Case/fields/E_Mail__c.field-meta.xml
<CustomField>
    <fullName>E_Mail__c</fullName>
    <formula>Contact.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>E-Mail</label>
    <type>Text</type>
</CustomField>