src/objects/Case/fields/Ec_Party_ID__c.field-meta.xml
<CustomField>
    <fullName>Ec_Party_ID__c</fullName>
    <label>Ec Party ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>