src/objects/Case/fields/EndCustomerInbound__c.field-meta.xml
<CustomField>
    <fullName>EndCustomerInbound__c</fullName>
    <description>Inbound End Customer</description>
    <inlineHelpText>Inbound End Customer</inlineHelpText>
    <label>End Customer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>