src/objects/Case/fields/EndCustomerOutBound__c.field-meta.xml
<CustomField>
    <fullName>EndCustomerOutBound__c</fullName>
    <description>Outbound End Customer</description>
    <inlineHelpText>Outbound End Customer</inlineHelpText>
    <label>End Customer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>