src/objects/Case/fields/Failure_Location__c.field-meta.xml
<CustomField>
    <fullName>Failure_Location__c</fullName>
    <label>Failure Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dead on Arrival</fullName>
            </value>
            <value>
                <fullName>Fail at customer</fullName>
            </value>
            <value>
                <fullName>Field failure / Fail at end-customer</fullName>
            </value>
            <value>
                <fullName>Sample / Demo /Loaner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>