src/objects/Case/fields/Fault_Location__c.field-meta.xml
<CustomField>
    <fullName>Fault_Location__c</fullName>
    <label>Fault Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Laser/VCSEL failure</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
            <value>
                <fullName>Factory</fullName>
            </value>
            <value>
                <fullName>Supplier</fullName>
            </value>
            <value>
                <fullName>Sales/Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>