src/objects/Case/fields/Finisar_Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Finisar_Sales_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The sales manager associated with this RMA Request</inlineHelpText>
    <label>Finisar Sales Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>