src/objects/Case/fields/FNSR_Engr__c.field-meta.xml
<CustomField>
    <fullName>FNSR_Engr__c</fullName>
    <label>FNSR Engr</label>
    <length>50</length>
    <type>Text</type>
</CustomField>