src/objects/Case/fields/Found_By__c.field-meta.xml
<CustomField>
    <fullName>Found_By__c</fullName>
    <label>Found By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Found_By</valueSetName>
    </valueSet>
</CustomField>