src/objects/Case/fields/FW_Version__c.field-meta.xml
<CustomField>
    <fullName>FW_Version__c</fullName>
    <label>FW Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>