src/objects/Case/fields/Has_Attachmets__c.field-meta.xml
<CustomField>
    <fullName>Has_Attachmets__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Attachmets</label>
    <type>Checkbox</type>
</CustomField>