src/objects/Case/fields/Incident_ID__c.field-meta.xml
<CustomField>
    <fullName>Incident_ID__c</fullName>
    <label>Incident ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>