src/objects/Case/fields/Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>Integration_Status__c</fullName>
    <description>Used to indicate the result of an integration on this individual record</description>
    <inlineHelpText>Used to indicate the result of an integration on this individual record</inlineHelpText>
    <label>Integration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Integration_Statuses</valueSetName>
    </valueSet>
</CustomField>