src/objects/Case/fields/IntegrationFlag__c.field-meta.xml
<CustomField>
    <fullName>IntegrationFlag__c</fullName>
    <defaultValue>&apos;Y&apos;</defaultValue>
    <label>IntegrationFlag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>