src/objects/Case/fields/Is_Disti_Order__c.field-meta.xml
<CustomField>
    <fullName>Is_Disti_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Disti Order</label>
    <type>Checkbox</type>
</CustomField>