src/objects/Case/fields/Issue_with__c.field-meta.xml
<CustomField>
    <fullName>Issue_with__c</fullName>
    <label>Issue with</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Issue_with</valueSetName>
    </valueSet>
</CustomField>