src/objects/Case/fields/Issues_Found__c.field-meta.xml
<CustomField>
    <fullName>Issues_Found__c</fullName>
    <inlineHelpText>Failures, Issues, and Problems found</inlineHelpText>
    <label>Issues Found</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>