src/objects/Case/fields/Loaner__c.field-meta.xml
<CustomField>
    <fullName>Loaner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If this RMA Request was created from a loaner, find the loaner here</inlineHelpText>
    <label>Loaner (If Applicable)</label>
    <referenceTo>Loaner__c</referenceTo>
    <relationshipLabel>Case / RMA Request</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>