src/objects/Case/fields/Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps__c</fullName>
    <inlineHelpText>Recommended Next Steps toward a Solution</inlineHelpText>
    <label>Next Steps</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>