src/objects/Case/fields/OpticalIC_BU_GM__c.field-meta.xml
<CustomField>
    <fullName>OpticalIC_BU_GM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OpticalIC BU GM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>