src/objects/Case/fields/Original_PO_SO__c.field-meta.xml
<CustomField>
    <fullName>Original_PO_SO__c</fullName>
    <description>Original Purchase Order or Sales Order Number</description>
    <label>Original PO/SO #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>