src/objects/Case/fields/Outbound_RMA_Not_Needed__c.field-meta.xml
<CustomField>
    <fullName>Outbound_RMA_Not_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If an outbound RMA is not needed, check this box</inlineHelpText>
    <label>Outbound RMA Not Needed</label>
    <type>Checkbox</type>
</CustomField>