src/objects/Case/fields/Outbound_RMA_PO__c.field-meta.xml
<CustomField>
    <fullName>Outbound_RMA_PO__c</fullName>
    <inlineHelpText>PO/Reference Number Used for shiping the RMA parts to Customer(i.e. Outbound RMA PO#)</inlineHelpText>
    <label>Outbound RMA PO#</label>
    <length>100</length>
    <type>Text</type>
</CustomField>