src/objects/Case/fields/Part_Numbers_s__c.field-meta.xml
<CustomField>
    <fullName>Part_Numbers_s__c</fullName>
    <label>Part Numbers(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>