src/objects/Case/fields/Part_Type__c.field-meta.xml
<CustomField>
    <fullName>Part_Type__c</fullName>
    <label>Part Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Generic Part</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>