src/objects/Case/fields/PCC__c.field-meta.xml
<CustomField>
    <fullName>PCC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PCC Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CC_Case_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>