src/objects/Case/fields/PLM__c.field-meta.xml
<CustomField>
    <fullName>PLM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PLM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Case_RMA_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>