src/objects/Case/fields/Poly__c.field-meta.xml
<CustomField>
    <fullName>Poly__c</fullName>
    <label>Poly</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4H</fullName>
            </value>
            <value>
                <fullName>6H</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>