src/objects/Case/fields/Product_and_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Product_and_Serial_Number__c</fullName>
    <label>Product and Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>