src/objects/Case/fields/Progress_Notes__c.field-meta.xml
<CustomField>
    <fullName>Progress_Notes__c</fullName>
    <label>Progress Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>