src/objects/Case/fields/Quantity_Returning__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Returning__c</fullName>
    <description>Total quantity of the items being returned</description>
    <label>Quantity Returning</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>