src/objects/Case/fields/RA_Number__c.field-meta.xml
<CustomField>
    <fullName>RA_Number__c</fullName>
    <label>RA Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>