src/objects/Case/fields/Requestor_E_mail__c.field-meta.xml
<CustomField>
    <fullName>Requestor_E_mail__c</fullName>
    <description>eMail of Requester</description>
    <formula>CreatedBy.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requester E-mail</label>
    <type>Text</type>
</CustomField>