src/objects/Case/fields/Requestor_Phone__c.field-meta.xml
<CustomField>
    <fullName>Requestor_Phone__c</fullName>
    <formula>CreatedBy.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requester Phone</label>
    <type>Text</type>
</CustomField>