src/objects/Case/fields/Resolution__c.field-meta.xml
<CustomField>
    <fullName>Resolution__c</fullName>
    <inlineHelpText>How was this issue resolved</inlineHelpText>
    <label>Resolution</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>