src/objects/Case/fields/Return_Reason__c.field-meta.xml
<CustomField>
    <fullName>Return_Reason__c</fullName>
    <label>Return Reason</label>
    <length>50</length>
    <type>Text</type>
</CustomField>