src/objects/Case/fields/RMA_PO__c.field-meta.xml
<CustomField>
    <fullName>RMA_PO__c</fullName>
    <description>if RMA Lines PO Amount are same then RMA Line PO Amt will be copied to this field
else RMA/MISC is copied over</description>
    <label>RMA PO</label>
    <length>80</length>
    <type>Text</type>
</CustomField>